# shops-watcher

./: .dockerignore  Dockerfile  README.md  gopro.py  pyproject.toml  requirements.txt  vrcover-shop-eu-scraper.py
k8s/: README.md  create-secrets.sh  cronjob.yaml  namespace.yaml
shop_watcher/: gopro.py
