[tool.poetry]
name = "vrcover-shop-eu-scraper"
version = "0.1.0"
description = ""
authors = ["Aleksandr Vinokurov <aleksandr.vin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gql = {extras = ["all"], version = "^3.5.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
